--- a/views/user-blocks.html
+++ b/views/user-blocks.html
@@ -4,6 +4,7 @@
 		<a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
 				<div class="d-none d-xl-block ps-2">
 						<div>{{ .User.Name }}</div>
+						<div>({{ .User.Plan }})</div>
 				</div>
 		</a>
 		<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
