Add monitor limit UI view

--- a/views/projects.html
+++ b/views/projects.html
@@ -47,9 +47,15 @@
 														{{ template "no-projects" }}
 												{{ end }}
 												{{ if gt (len .Projects) 0 }}
+
 												<div class="row g-2 align-items-center">
 														<div class="d-flex justify-content-between align-items-center mb-3">
-																<h2 class="m-0">My projects</h2>
+																<h2 class="m-0">My projects
+																		<button class="btn">
+																				<span class="badge bg-azure text-azure-fg ms-2">{{ .MonitorUsed }} / {{ .MonitorLimit }}</span>
+																				&nbsp; monitors used
+																		</button>
+																</h2>
 																<div class="d-print-none">
 																		<a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-report">
 																				<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
