Fix create monitor form bug

--- a/views/monitors.html
+++ b/views/monitors.html
@@ -28,13 +28,13 @@
 																<div class="mb-3">
 																		<label class="form-label">Period</label>
 																		<div class="input-group input-group-flat">
-																				<input type="number" name="period" class="form-control ps-0"  value="report-01" autocomplete="off" placeholder="25" />
+																				<input type="text" name="period" class="form-control ps-0" autocomplete="off" placeholder="25" />
 																		</div>
 																</div>
 																<div class="mb-3">
 																		<label class="form-label">Grace period</label>
 																		<div class="input-group input-group-flat">
-																				<input type="number" name="grace_period" class="form-control ps-0"  value="report-01" autocomplete="off" placeholder="25" />
+																				<input type="text" name="grace_period" class="form-control ps-0" autocomplete="off" placeholder="25" />
 																		</div>
 																</div>
 														</div>
