Fix period and grace_period issues when creating monitor

--- a/views/monitors.html
+++ b/views/monitors.html
@@ -28,23 +28,14 @@
 																<div class="mb-3">
 																		<label class="form-label">Period</label>
 																		<div class="input-group input-group-flat">
-																				<input type="text" name="period" class="form-control ps-0" autocomplete="off" placeholder="25" />
+																				<input type="text" name="period" class="form-control ps-0" autocomplete="off" placeholder="Min 5, Max 1440, Default 25 - minutes" />
 																		</div>
 																</div>
 																<div class="mb-3">
 																		<label class="form-label">Grace period</label>
 																		<div class="input-group input-group-flat">
-																				<input type="text" name="grace_period" class="form-control ps-0" autocomplete="off" placeholder="25" />
+																				<input type="text" name="grace_period" class="form-control ps-0" autocomplete="off" placeholder="Min 5, Max 1440, Default 25 - minutes" />
 																		</div>
-																</div>
-														</div>
-														<div class="col-lg-4">
-																<div class="mb-3">
-																		<label class="form-label">Visibility</label>
-																		<select class="form-select">
-																				<option value="private">Private</option>
-																				<option value="public" selected>Public</option>
-																		</select>
 																</div>
 														</div>
 												</div>
