Fix errors, add update monitor form validation

--- a/views/modals.html
+++ b/views/modals.html
@@ -18,13 +18,13 @@
 												<div class="mb-3">
 														<label class="form-label">Period</label>
 														<div class="input-group input-group-flat">
-																<input type="number" name="period" class="form-control ps-0" autocomplete="off" placeholder="Minutes" value={{.Monitor.Period}} >
+																<input type="number" name="period" class="form-control ps-0" autocomplete="off" placeholder="Min 5, Max 1440, Default 25 - minutes" value={{.Monitor.Period}} >
 														</div>
 												</div>
 												<div class="mb-3">
 														<label class="form-label">Grace period</label>
 														<div class="input-group input-group-flat">
-																<input type="number" name="grace_period" class="form-control ps-0" autocomplete="off" placeholder="Minutes" value={{.Monitor.GracePeriod}}>
+																<input type="number" name="grace_period" class="form-control ps-0" autocomplete="off" placeholder="Min 5, Max 1440, Default 25 - minutes" value={{.Monitor.GracePeriod}}>
 														</div>
 												</div>
 										</div>
