--- a/views/modals.html
+++ b/views/modals.html
@@ -1,7 +1,7 @@
 {{ template "errors" . }}
 {{ define "modal-report" }}
 <form class="modal modal-blur fade" id="modal-report" tabindex="-1" role="dialog" hx-swap="beforeend" hx-put="/api/monitor/{{.Monitor.ID}}" hx-target="body" aria-hidden="true">
-		<!-- <input type="text" name="monitor_id" value={{.Monitor.ID}} hidden> -->
+		<input type="text" name="monitor_id" value={{.Monitor.ID}} hidden>
 		<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
 				<div class="modal-content">
 						<div class="modal-header">
