--- a/views/monitor-integrations.html
+++ b/views/monitor-integrations.html
@@ -4,26 +4,36 @@
 		<div class="col-lg-12">
 				<div class="card">
 						<div class="card-stamp">
+								{{ if eq .AlertType "email" }}
 								<div class="card-stamp-icon bg-green">
 										<svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-mail"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" /><path d="M3 7l9 6l9 -6" /></svg>
 								</div>
+								{{ else if eq .AlertType "slack" }}
+								<div class="card-stamp-icon bg-yellow">
+										<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-slack"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12v-6a2 2 0 0 1 4 0v6m0 -2a2 2 0 1 1 2 2h-6" /><path d="M12 12h6a2 2 0 0 1 0 4h-6m2 0a2 2 0 1 1 -2 2v-6" /><path d="M12 12v6a2 2 0 0 1 -4 0v-6m0 2a2 2 0 1 1 -2 -2h6" /><path d="M12 12h-6a2 2 0 0 1 0 -4h6m-2 0a2 2 0 1 1 2 -2v6" /></svg>
+								</div>
+								{{ else }}
+								<div class="card-stamp-icon bg-black">
+										<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-webhook"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4.876 13.61a4 4 0 1 0 6.124 3.39h6" /><path d="M15.066 20.502a4 4 0 1 0 1.934 -7.502c-.706 0 -1.424 .179 -2 .5l-3 -5.5" /><path d="M16 8a4 4 0 1 0 -8 0c0 1.506 .77 2.818 2 3.5l-3 5.5" /></svg>
+								</div>
+								{{ end }}
 						</div>
 						<div class="card-body">
 								<h3 class="card-title">
 										{{ title .AlertType }}
-								{{ if .IsActive }}
+										{{ if .IsActive }}
 										<span class="badge bg-green text-green-fg">Active</span>
 								</h3>
 								{{ else }}
 								<span class="badge bg-grey text-grey-fg">Inactive</span></h3>
-						{{ end }}
-						{{ if eq .AlertType "email" }}
+								{{ end }}
+								{{ if eq .AlertType "email" }}
 								<a href="#" data-bs-toggle="modal" data-bs-target="#email-alert">Configure</a>
-						{{ else if eq .AlertType "slack" }}
+								{{ else if eq .AlertType "slack" }}
 								<a href="#" data-bs-toggle="modal" data-bs-target="#slack-alert">Configure</a>
-						{{ else }}
+								{{ else }}
 								<a href="#" data-bs-toggle="modal" data-bs-target="#webhook-alert">Configure</a>
-						{{ end }}
+								{{ end }}
 						</div>
 				</div>
 		</div>
