--- a/views/pricing.html
+++ b/views/pricing.html
@@ -17,7 +17,7 @@
 														<div class="card card-md">
 																<div class="card-body text-center">
 																		<div class="text-uppercase text-secondary font-weight-medium">Free</div>
-																		<div class="display-5 fw-bold my-3">$0</div>
+																		<div class="display-5 fw-bold my-3">0 INR</div>
 																		<ul class="list-unstyled lh-lg">
 																				<li><strong>For exploring monitors and for small projects</strong></li>
 																				<li>
@@ -33,7 +33,7 @@
 																				<li>
 																						<!-- Download SVG icon from http://tabler-icons.io/i/x -->
 																						<svg xmlns="http://www.w3.org/2000/svg" class="icon me-1 text-danger" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
-																						Alternate emails
+																						Alternate emails (Coming soon)
 																				</li>
 																				<li>
 																						<!-- Download SVG icon from http://tabler-icons.io/i/x -->
@@ -56,7 +56,7 @@
 																</div>
 																		<div class="card-body text-center">
 																				<div class="text-uppercase text-secondary font-weight-medium">Hobbyist</div>
-																				<div class="display-5 fw-bold my-3">$3</div>
+																				<div class="display-5 fw-bold my-3">300 INR</div>
 																				<ul class="list-unstyled lh-lg">
 																						<li><strong>For hobbyists with serious side projects along with supporting this product</strong></li>
 																						<li>
@@ -72,7 +72,7 @@
 																						<li>
 																								<!-- Download SVG icon from http://tabler-icons.io/i/x -->
 																								<svg xmlns="http://www.w3.org/2000/svg" class="icon me-1 text-success" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg>
-																								Alternate emails
+																								Alternate emails (Coming soon)
 																						</li>
 																						<li>
 																								<!-- Download SVG icon from http://tabler-icons.io/i/x -->
@@ -92,7 +92,7 @@
 																<div class="card card-md">
 																		<div class="card-body text-center">
 																				<div class="text-uppercase text-secondary font-weight-medium">Pro</div>
-																				<div class="display-5 fw-bold my-3">$10</div>
+																				<div class="display-5 fw-bold my-3">850 INR</div>
 																				<ul class="list-unstyled lh-lg">
 																						<li><strong>For startups</strong></li>
 																						<li>
@@ -108,7 +108,7 @@
 																						<li>
 																								<!-- Download SVG icon from http://tabler-icons.io/i/x -->
 																								<svg xmlns="http://www.w3.org/2000/svg" class="icon me-1 text-success" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg>
-																								Alternate emails
+																								Alternate emails (Coming soon)
 																						</li>
 																						<li>
 																								<!-- Download SVG icon from http://tabler-icons.io/i/x -->
